--- a/style.css
+++ b/style.css
@@ -110,6 +110,10 @@ img, video, iframe{
 	margin: 10px;
 }
 
+iframe{
+	border: none;
+}
+
 .galerij{
 	display:flex;
 	flex-wrap: wrap;
@@ -119,6 +123,12 @@ img, video, iframe{
 .galerij img, .galerij video, .galerij iframe{
 	float:none;
 	margin:10px;
+}
+
+#boomhut{
+	width:100%;
+	height: 300px;
+	float:none;
 }
 
 @media only screen and (min-width: 1024px){
@@ -133,7 +143,7 @@ img, video, iframe{
 	margin: 0 10px;
 	}
 
-	img.klein{
+	.klein{
 		width: 10%;
 	}
 }
