--- a/style.css
+++ b/style.css
@@ -139,6 +139,14 @@ footer{
 	background-color: dodgerblue;
 }
 
+body script {
+    display: block;
+    font-family: monospace;
+    white-space: pre;
+    height:300px;
+    overflow: scroll;
+}
+
 @media only screen and (min-width: 1024px){
 	main{
 		width:70%;
